<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterBook">

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_titulo"
        android:inputType="textPersonName"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_nome_do_autor"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_ano_de_lancamento"
        android:inputType="textPersonName"
        android:textSize="15dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/salvar"
            android:textSize="15dp" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/cancelar"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>